Change in Version 2.4.4
- bugfix in Ex argument in `bgvar`

Change in Version 2.4.2/3
- bugfix in fevd; added additional check

Change in Version 2.4.1
- bugfix in Rcpp code (occured when using SSVS prior and save.shrink.store=TRUE)
- bugfixes in vignette
- update of monthlyData dataset

Change in Version 2.4.0
- bugfix in plotting fitted values
- per default no save of containers of shrinkage parameter - decreases significantly memory usage
- restructure of example data sets
- change print method of rmse / lps

Change in Version 2.3.1
- small adaptions in help files.
- changed some functions to S3 method
- changed default options of bgvar()
- renaming of functions
- bugfix(es) with external variables

Change in Version 2.3.0
- added reader function for Excel
- updated vignette with own section for reading data from excel

Change in Version 2.2.2
- small fix in BVAR_linear.cpp

Change in Version 2.2.1
- small update to clear errors in CRAN Checks
- added output of 'bgvar' function. Now directly shows the number of stable draws when using the function.
- added a missing reference in vignette

Change in Version 2.2.0
- complete redesign of 'irf' function
  - computation of irf now in C++
  - makes use of parallel computing via RcppParallel
  - additional argument with 'shockinfo'
- two new functions: get_shockinfo() and add_shockinfo() as helper function for designing shockinfo argument in irf computation
- introduction of 'expert' settings to reduce number of arguments in main functions (bgvar and irf)
- conditional predictions now possible within predict function
- synchronization of parameter names with accompanied paper
- minor bug fixes

Change in Version 2.1.4
- updated backends of new 'stochvol' package
- added dataset 'eerDatasmall' to check functionality of package faster
- minor bug fixes

Change in Version 2.1.3
- fixed typo in vignette

Changes in Version 2.1.2
- adapted various roxygen articles
- summary output needs now less space