@@ -1,5 +1,7 @@
 Change in Version 2.4.4
 - bugfix in Ex argument in `bgvar`
+- bugfix in summary command
+- bugfix with Wex.restr
 
 Change in Version 2.4.2/3
 - bugfix in fevd; added additional check
